style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  text-decoration: none;
}

html {
  font-size: 10px;
}

body {
  font-size: 1.6rem;
}

button {
  cursor: pointer;
  background-color: transparent;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
}

.dNone {
  display: none;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 30rem;
  background: url("./assets/img/header_image.jpg") bottom no-repeat;
  background-size: cover;
  color: black;
  text-align: center;
}

#logo {
  position: absolute;
  width: 40dvw;
  z-index: 10;
}

main {
  text-align: center;
  padding: 2dvh 0;
}

main h1 {
  font-size: clamp(2rem, 5dvw, 6rem);
  color: orange;
}

main span {
  font-size: clamp(1.6rem, 3dvw, 3.5rem);
  color: #fff;
}

.contentWrapper {
  width: 80dvw;
  display: flex;
  flex-grow: 1;
  background-color: rgb(209, 145, 66);
}

.content {
  width: 100%;
  color: aqua;
  background-color: aquamarine;
}

footer {
  text-align: center;
  height: 10dvh;
  background-color: rgb(119, 38, 38);
  color: white;
}

#renderDishes .dishContainer {
  width: 80dvw;
  display: flex;
  color: white;
  padding: 1dvh 1dvw;
  border: 1dvw solid white;
}

#renderDishes .dishContainer img {
  width: 40dvw;

  -position: center;
}

#renderDishes .dishContainer div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#renderDishes h2 {
  font-size: clamp(1.8rem, 3dvw, 4rem);
}

#renderDishes p {
  font-size: clamp(1.2rem, 1.8dvw, 2.4rem);
  text-align: center;
  width: 50%;
  padding: 1dvh 0;
}

#orderBtn {
  width: 18dvw;
  aspect-ratio: 4/1;
  color: white;
  background-color: orange;
  border: none;
}

.cartWrapper {
  width: 100%;
  color: rgb(194, 149, 44);
}

.cartWrapper > div {
  position: sticky;
  top: 0;
  overflow-y: auto;
  background: rgb(226, 180, 131);
  color: white;
}

.cartWrapper h3,
aside h3 {
  font-size: clamp(1.8rem, 3dvw, 3.6rem);
}

.cartWrapper ul {
  width: 100%;
}

.cartWrapper li {
  list-style-type: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1dvh 1dvw;
  background-color: rgb(207, 214, 221);
}

.cartDishName {
  font-size: clamp(1.2rem, 2dvw, 2rem);
}

.cartWrapper button {
  padding: 1dvh 1dvw;
  width: 3dvw;
  aspect-ratio: 1.5/1;
  background-color: rgb(238, 189, 98);
  border-radius: 16px;
}

.cartWrapper button:hover {
  background-color: rgb(226, 184, 49);
}

.cartWrapper .removeBtn {
  background-image: url("./assets/icons/icon_remove.png");
  background-color: beige;
}

.cartWrapper .addBtn {
  background-image: url("./assets/icons/icon_add.png");

  background-color: beige;
}

.cartWrapper .delBtn {
  background-image: url("./assets/icons/icon_delete.png");
  background-color: rgb(191, 165, 157);
}

.quantityInCart {
  width: 10dvw;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 480px) {
  .cartWrapper {
    display: none;
    position: fixed;
    inset: 0;
    z-index: 1000;
    background-color: rgba(196, 188, 176, 0.98);
    padding: 1dvh 1dvw;
    overflow-y: auto;
    align-items: space-between;
    justify-content: center;
    align-items: center;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
  }

  .cartWrapper.open {
    display: flex;
    width: 40dvw;
    height: 40dvh;
    border-radius: 36px;
  }

  .toggle-cart-btn {
    position: fixed;
    bottom: 2dvh;
    right: 2dvw;
    background-color: rgb(219, 186, 115);
    color: white;
    border: none;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    font-size: 1.8rem;
    z-index: 1100;
  }
  .toggle-cart-btn:hover {
    background-color: #e1d1b3;
  }

  .contentWrapper {
    flex-grow: 1;
    @media (min-width: 480px) {
      display: none;
    }
    flex-direction: column;
    align-items: center;
    .dishContainer {
      flex-grow: 1;
    }
  }
}

.restaurant-description {
  font-size: 1.8rem;
  color: #555;
  margin-top: 0.5rem;
}

.restaurant-stars {
  font-size: 1.8rem;
  color: #ffa500; /* orange stars */
  margin-bottom: 0.5rem;
}

.star {
  color: lightgray;
  margin-right: 0.1rem;
  position: relative;
  display: inline-block;
}

/* Full star */
.star.full {
  color: #ffa500;
}

/* Half star */
.star.half::before {
  content: "★";
  color: #ffa500;
  position: absolute;
  width: 50%;
  overflow: hidden;
  left: 0;
  top: 0;
}

/* Empty star */
.star.empty {
  color: lightgray;
}

